--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@stl-packages/nextcraft-ui",
+  "name": "@jameskabz/nextcraft-ui",
   "version": "0.1.0",
   "description": "Next.js + Tailwind UI components with a bold, crafted aesthetic.",
   "private": false,
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stl-packages/nextcraft-ui.git"
+    "url": "git+https://github.com/jameskabz/nextcraft-ui.git"
   },
-  "homepage": "https://github.com/stl-packages/nextcraft-ui#readme",
+  "homepage": "https://github.com/jameskabz/nextcraft-ui#readme",
   "bugs": {
-    "url": "https://github.com/stl-packages/nextcraft-ui/issues"
+    "url": "https://github.com/jameskabz/nextcraft-ui/issues"
   },
   "type": "module",
   "files": [
