--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+concurrency:
+  group: release-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -22,7 +26,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: npm
 
       - name: Install dependencies
         run: npm ci
@@ -50,31 +54,29 @@ jobs:
   release:
     needs: test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: >
+      github.ref == 'refs/heads/main' &&
+      github.event_name == 'push' &&
+      github.actor != 'github-actions[bot]' &&
+      !contains(github.event.head_commit.message, '[skip ci]')
 
     permissions:
       contents: write
-      id-token: write  # Required for OIDC trusted publishing
+      issues: write
+      pull-requests: write
 
     steps:
-      - name: Checkout code
+      - name: Checkout code (full history + tags)
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
-          cache: 'npm'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Update npm to latest version
-        run: npm install -g npm@latest
-
-      - name: Verify npm version
-        run: npm --version
+          node-version: 22.x
+          cache: npm
+          registry-url: https://registry.npmjs.org
 
       - name: Install dependencies
         run: npm ci
@@ -82,46 +84,9 @@ jobs:
       - name: Build library
         run: npm run build
 
-      - name: Configure Git
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-
-      - name: Determine version bump
-        id: version
-        run: |
-          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-          COMMITS=$(git log --oneline ${LAST_TAG}..HEAD 2>/dev/null || echo "")
-
-          if echo "$COMMITS" | grep -q "BREAKING CHANGE\|!:"; then
-            echo "bump=major" >> $GITHUB_OUTPUT
-            echo "reason=BREAKING CHANGE detected" >> $GITHUB_OUTPUT
-          elif echo "$COMMITS" | grep -q "feat:"; then
-            echo "bump=minor" >> $GITHUB_OUTPUT
-            echo "reason=New features detected" >> $GITHUB_OUTPUT
-          elif echo "$COMMITS" | grep -q "fix:"; then
-            echo "bump=patch" >> $GITHUB_OUTPUT
-            echo "reason=Bug fixes detected" >> $GITHUB_OUTPUT
-          else
-            echo "bump=patch" >> $GITHUB_OUTPUT
-            echo "reason=No conventional commits, defaulting to patch" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Version bump and publish
-        run: |
-          echo "Version bump reason: ${{ steps.version.outputs.reason }}"
-          echo "Bump type: ${{ steps.version.outputs.bump }}"
-
-          npm version ${{ steps.version.outputs.bump }} --no-git-tag-version
-
-          NEW_VERSION=$(node -p "require('./package.json').version")
-          echo "New version: $NEW_VERSION"
-
-          git add package.json package-lock.json
-          git commit -m "chore: release v${NEW_VERSION}"
-
-          git tag "v${NEW_VERSION}"
-          git push origin main
-          git push origin "v${NEW_VERSION}"
-
-          npm publish --access public
+      - name: Release (semantic-release)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Map your existing secret to what npm/semantic-release expects
+          NPM_TOKEN: ${{ secrets.NEXTCRAFT_UI }}
+        run: npx semantic-release
