--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,7 +1,15 @@
 {
   "branches": ["main"],
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    ["@semantic-release/commit-analyzer", {
+      "preset": "conventionalcommits",
+      "releaseRules": [
+        { "type": "feat", "release": "minor" },
+        { "type": "fix",  "release": "patch" },
+        { "type": "perf", "release": "patch" },
+        { "breaking": true, "release": "major" }
+      ]
+    }],
     "@semantic-release/release-notes-generator",
     "@semantic-release/npm",
     "@semantic-release/github"
