--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "^16.1.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-hook-form": "^7.71.1",
     "tailwindcss": "^4"
   },
   "devDependencies": {
@@ -62,6 +63,7 @@
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "tailwindcss": "^4",
     "tsup": "^8.5.0",
     "typescript": "^5"
