--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "test:coverage": "echo \"No coverage configured\""
   },
   "peerDependencies": {
+    "lucide-react": "^0.542.0",
     "next": "^16.1.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -60,6 +61,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "lucide-react": "^0.542.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
