--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "test:coverage": "echo \"No coverage configured\""
   },
   "peerDependencies": {
-    "lucide-react": "^0.542.0",
     "next": "^16.1.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -86,7 +85,6 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
-    "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -94,5 +92,8 @@
     "tailwindcss": "^4",
     "tsup": "^8.5.0",
     "typescript": "^5"
+  },
+  "dependencies": {
+    "lucide-react": "^0.563.0"
   }
 }
