--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "test:coverage": "echo \"No coverage configured\""
   },
   "peerDependencies": {
+    "lucide-react": "^0.563.0",
     "next": "^16.1.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -85,6 +86,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -92,8 +94,5 @@
     "tailwindcss": "^4",
     "tsup": "^8.5.0",
     "typescript": "^5"
-  },
-  "dependencies": {
-    "lucide-react": "^0.563.0"
   }
 }
