--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,27 +54,31 @@ jobs:
   release:
     needs: test
     runs-on: ubuntu-latest
-    if: >
-      github.ref == 'refs/heads/main' &&
-      github.event_name == 'push' &&
-      github.actor != 'github-actions[bot]' &&
-      !contains(github.event.head_commit.message, '[skip ci]')
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     permissions:
       contents: write
+      id-token: write
 
     steps:
-      - name: Checkout code (full history + tags)
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22.x
+          node-version: 20.x
           cache: npm
           registry-url: https://registry.npmjs.org
+
+      - name: Update npm to latest version
+        run: npm install -g npm@latest
+
+      - name: Verify npm version
+        run: npm --version
 
       - name: Install dependencies
         run: npm ci
@@ -82,7 +86,46 @@ jobs:
       - name: Build library
         run: npm run build
 
-      - name: Publish to npm
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NEXTCRAFT_UI }}
-        run: npm publish --access public
+      - name: Configure Git
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+
+      - name: Determine version bump
+        id: version
+        run: |
+          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          COMMITS=$(git log --oneline ${LAST_TAG}..HEAD 2>/dev/null || echo "")
+
+          if echo "$COMMITS" | grep -q "BREAKING CHANGE\\|!:"; then
+            echo "bump=major" >> $GITHUB_OUTPUT
+            echo "reason=BREAKING CHANGE detected" >> $GITHUB_OUTPUT
+          elif echo "$COMMITS" | grep -q "feat:"; then
+            echo "bump=minor" >> $GITHUB_OUTPUT
+            echo "reason=New features detected" >> $GITHUB_OUTPUT
+          elif echo "$COMMITS" | grep -q "fix:"; then
+            echo "bump=patch" >> $GITHUB_OUTPUT
+            echo "reason=Bug fixes detected" >> $GITHUB_OUTPUT
+          else
+            echo "bump=patch" >> $GITHUB_OUTPUT
+            echo "reason=No conventional commits, defaulting to patch" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Version bump and publish
+        run: |
+          echo "Version bump reason: ${{ steps.version.outputs.reason }}"
+          echo "Bump type: ${{ steps.version.outputs.bump }}"
+
+          npm version ${{ steps.version.outputs.bump }} --no-git-tag-version
+
+          NEW_VERSION=$(node -p "require('./package.json').version")
+          echo "New version: $NEW_VERSION"
+
+          git add package.json package-lock.json
+          git commit -m "chore: release v${NEW_VERSION}"
+
+          git tag "v${NEW_VERSION}"
+          git push origin main
+          git push origin "v${NEW_VERSION}"
+
+          npm publish --access public
