--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "react-hook-form": "^7.71.1",
     "tailwindcss": "^4",
     "@fortawesome/fontawesome-svg-core": "^6.0.0 || ^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0 || ^7.0.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0 || ^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0 || ^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.0 || ^3.0.0"
   },
@@ -62,6 +64,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "babel-plugin-react-compiler": "1.0.0",
